--- a/style.css
+++ b/style.css
@@ -1,93 +1,113 @@
+@import url("https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap");
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.app {
-  height: 100vh;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  font-family: "Montserrat", sans-serif;
+html {
+	font-size: 62.5%;
 }
 
-.time-select,
-.sound-picker {
-  height: 80%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
-  flex: 1;
-}
-.time-select button,
-.sound-picker button {
-  color: white;
-  width: 30%;
-  height: 10%;
-  background: none;
-  font-size: 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  border: 2px solid white;
-  transition: all 0.5s ease;
+body {
+	font-size: 1.6rem;
+	font-family: RocknRoll One, sans-serif;
 }
 
-.sound-picker button {
-  border: none;
-  height: 120px;
-  width: 120px;
-  padding: 30px;
-  border-radius: 50%;
-}
-.sound-picker button:nth-child(1) {
-  background: #4972a1;
-}
-.sound-picker button:nth-child(2) {
-  background: #a14f49;
-}
-.sound-picker button img {
-  height: 100%;
+.pomodoro_container {
+	height: 100vh;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
 }
 
-.time-select button:hover {
-  background: white;
-  color: black;
+.time_select,
+.sound_picker,
+.player_container {
+	height: 80%;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
 }
 
-.player-container {
-  position: relative;
-  height: 80%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
-  flex: 1;
+.player_container {
+	position: relative;
 }
 
-.player-container svg {
-  position: absolute;
-  height: 50%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(-90deg);
-  pointer-events: none;
+.player_container svg {
+	position: absolute;
+	height: 50%;
+	pointer-events: none;
+	transform: rotate(-90deg);
 }
-.player-container svg circle {
-  transition: all 0.2s ease-in-out;
+
+.play,
+.replay {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
+
+.replay {
+	left: 50%;
+	top: 69%;
+}
+
 .time-display {
-  color: white;
-  position: absolute;
-  font-size: 50px;
-  bottom: 10%;
+	position: absolute;
+	bottom: 10%;
+	color: white;
+	font-size: 5rem;
+}
+
+.time_select button,
+.sound_picker button {
+	color: white;
+	width: 13rem;
+	height: 5.3rem;
+	background: none;
+	border: 2px solid white;
+	cursor: pointer;
+	border-radius: 5px;
+	font-size: 1.5rem;
+	font-family: inherit;
+	transition: 0.3s;
+}
+
+.time_select button:hover {
+	color: black;
+	background: white;
+}
+
+.sound_picker button {
+	border: none;
+	height: 12rem;
+	width: 12rem;
+	border-radius: 50%;
+	padding: 2rem;
+}
+
+.sound_picker img {
+	height: 100%;
+}
+
+.sound_picker button:nth-child(1) {
+	background: #4972a1;
+}
+
+.sound_picker button:nth-child(2) {
+	background: #a14f49;
 }
 
 video {
-  position: fixed;
-  top: 0%;
-  left: 0%;
-  width: 100%;
-  z-index: -10;
+	position: fixed;
+	top: 0%;
+	left: 0%;
+	overflow: hidden;
+	width: 150rem;
+	z-index: -10;
 }
