--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap");
+
+/* $bp-large: 78.15em; // 1250px
+$bp-medium: 61.25em; // 980px
+$bp-small: 37.5em; // 600px
+$bp-smallest: 31.25em; // 500px */
+
 :root {
 	--background: url(./img/rain.jpg);
 }
@@ -20,24 +26,22 @@ body {
 	background-image: var(--background);
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-position: center;
 	transition: 0.5s;
+	overflow-y: hidden;
 	text-align: center;
 }
 
-h1 {
-	position: fixed;
+.title_container h1 {
 	font-size: 5rem;
 	color: white;
-	top: 10%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	margin-top: 2.5rem;
 }
 
 .pomodoro_container {
 	height: 100vh;
 	display: flex;
 	justify-content: space-evenly;
-	align-items: center;
 }
 
 .time_select,
@@ -51,6 +55,7 @@ h1 {
 	align-items: center;
 }
 
+/* Player Part */
 .player_container {
 	position: relative;
 }
@@ -90,6 +95,7 @@ h1 {
 	font-size: 5rem;
 }
 
+/* Time and sound */
 .time_select button,
 .sound_picker button {
 	color: white;
@@ -109,6 +115,7 @@ h1 {
 	background: white;
 }
 
+/* Sound */
 .sound_picker button {
 	border: none;
 	height: 12rem;
@@ -144,4 +151,77 @@ video {
 	overflow: hidden;
 	width: 150rem;
 	z-index: -10;
+}
+
+
+button:focus {
+	outline: 0;
+}
+
+@media only screen and (max-width: 860px) {
+	html {
+		font-size: 50%;
+	}
+}
+
+@media only screen and (max-width: 680px) {
+	.pomodoro_container {
+		padding-bottom: 5rem;
+		height: 93vh;
+		flex-direction: column;
+		justify-content: space-between;
+	}
+
+	.time_select,
+	.sound_picker {
+		flex: 0;
+		flex-direction: row;
+		width: 100%;
+		flex-wrap: wrap;
+	}
+
+	.time_select {
+		margin-top: 5rem;
+	}
+
+	/* Player Part */
+	.player_container {
+		min-height: 35rem;
+		flex: 0;
+	}
+
+	.player_container svg {
+		height: 100%;
+		pointer-events: none;
+		transform: rotate(-90deg);
+	}
+
+	.play {
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%) scale(0.7);
+	}
+
+	.count-display {
+		top: 15%;
+	}
+
+	.time-display,
+	.count-display {
+		font-size: 3rem;
+	}
+
+	.time_select button,
+	.sound_picker button {
+		display: inline-block;
+	}
+
+	/* Sound and Time Part */
+	.sound_picker button {
+		transform: scale(0.7);
+	}
+
+	.sound_picker button:hover {
+		transform: scale(0.8);
+	}
 }
