--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 :root {
 	--background: url(./img/rain.jpg);
+	--stroke: rgb(255, 255, 255);
 }
 
 * {
@@ -24,6 +25,12 @@ body {
 	transition: 0.5s;
 	overflow-y: hidden;
 	text-align: center;
+}
+
+h1,
+h3 {
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: var(--stroke);
 }
 
 .title_container h1 {
@@ -98,6 +105,8 @@ body {
 }
 
 .volume {
+	color: var(--stroke);
+	background-color: white;
 	-webkit-appearance: none;
 	width: 100%;
 	outline: none;
@@ -106,21 +115,21 @@ body {
 }
 
 .volume::before {
-	content: "0";
-	color: white;
+	content: "-";
+	color: var(--stroke);
 	position: absolute;
 	left: -10%;
-	font-size: 2rem;
-	top: 16%;
+	font-size: 3rem;
+	top: -20%;
 }
 
 .volume::after {
-	content: "100";
-	color: white;
+	content: "+";
+	color: var(--stroke);
 	position: absolute;
-	right: -20%;
-	font-size: 2rem;
-	top: 13%;
+	right: -13%;
+	font-size: 3rem;
+	top: -15%;
 }
 
 .volume::-webkit-slider-thumb {
@@ -128,7 +137,7 @@ body {
 	appearance: none;
 	width: 2rem;
 	height: 2rem;
-	background: rgb(63, 63, 63);
+	background: rgb(131, 131, 131);
 	border-radius: 20px;
 }
 
@@ -144,11 +153,11 @@ body {
 /* Time and sound */
 .time_select button,
 .sound_picker button {
-	color: white;
+	color: var(--stroke);
 	width: 13rem;
 	height: 5.3rem;
 	background: none;
-	border: 2px solid white;
+	border: 2px solid var(--stroke);
 	cursor: pointer;
 	border-radius: 5px;
 	font-size: 1.5rem;
