--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap");
 
 :root {
-	--background: url(./img/rain.png);
+	--background: url(./img/rain.jpg);
 	--stroke: rgb(255, 255, 255);
 }
 
@@ -16,7 +16,7 @@ html {
 }
 
 body {
-	background-color: 	#ABABAB;
+	background-color: #ababab;
 	font-size: 1.6rem;
 	font-family: RocknRoll One, sans-serif;
 	background-image: var(--background);
@@ -24,20 +24,21 @@ body {
 	background-size: cover;
 	background-position: center;
 	transition: 0.5s;
-	overflow-y: hidden;
+	overflow: hidden;
 	text-align: center;
 }
 
 h1,
 h3 {
 	-webkit-text-stroke-width: 1px;
-	-webkit-text-stroke-color: var(--stroke);
+	-webkit-text-stroke-color: rgb(240, 240, 240);
 }
 
 .title_container h1 {
 	font-size: 5rem;
 	color: white;
 	margin-top: 2.5rem;
+	transform: translateY(15px) scale(1.3);
 }
 
 .pomodoro_container {
@@ -258,10 +259,11 @@ button:focus {
 
 	.time_select,
 	.sound_picker {
+		padding: 1rem;
 		flex: 0;
 		flex-direction: row;
 		width: 100%;
-		flex-wrap: wrap;
+		flex-wrap: nowrap;
 	}
 
 	.time_select {
